# fh6-automation

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  build_exe.ps1  installer.iss  pyproject.toml
.github/workflows/: release.yml
src/: app.py  capture.py  config.py  keys.py  runner.py  settings.py  updater.py  version.py  vision.py  window.py
src/steps/: __init__.py  buy_car.py  constants.py  farm_sp.py  remove_car.py  upgrade_car.py
tests/: test_config.py  test_runner.py  test_vision.py
