[project]
name = "fh6-automation"
version = "0.6.0"
description = "Forza Horizon 6 automation toolkit"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12,<3.13"
dependencies = [
  "bettercam>=1.0",
  "loguru>=0.7",
  "mss>=10.0",
  "numpy>=2.0",
  "opencv-python>=4.10",
  "pydirectinput-rgx>=2.1",
  "pygetwindow>=0.0.9",
  "pyside6>=6.7",
  "pywin32>=306",
]

[dependency-groups]
dev = ["black>=25.1", "pre-commit>=4.0", "pyinstaller>=6.10"]

[tool.uv]
package = false

[tool.black]
line-length = 120
target-version = ["py312"]
